# swagger.json
@@ -84,11 +84,52 @@
                     "Control"
                 ],
                 "operationId": "TriggerFingerprintMode",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/TriggerFingerprintModeRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/TriggerFingerprintModeResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/control/logs": {
+            "get": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "GetAllLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllLogsResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "DeleteAllLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/DeleteAllLogsResponse"
                         }
                     }
                 }
@@ -116,6 +157,17 @@
                     "Control"
                 ],
                 "operationId": "TriggerRFIDMode",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/TriggerRFIDModeRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -130,6 +182,9 @@
     "definitions": {
         "ChangePinRequest": {
             "type": "object",
+            "required": [
+                "new_pin"
+            ],
             "properties": {
                 "new_pin": {
                     "type": "string"
@@ -138,22 +193,67 @@
         },
         "ChangePinResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "DeleteAllLogsResponse": {
+            "type": "object",
+            "required": [
+                "message"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "GetAllLogsResponse": {
+            "type": "object",
+            "required": [
+                "logs"
+            ],
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.Log"
+                    }
                 }
             }
         },
         "TriggerBuzzerAlarmResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
                 }
             }
         },
+        "TriggerFingerprintModeRequest": {
+            "type": "object",
+            "required": [
+                "slot"
+            ],
+            "properties": {
+                "slot": {
+                    "type": "integer"
+                }
+            }
+        },
         "TriggerFingerprintModeResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -162,14 +262,31 @@
         },
         "TriggerOpenDoorResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
                 }
             }
         },
+        "TriggerRFIDModeRequest": {
+            "type": "object",
+            "required": [
+                "slot"
+            ],
+            "properties": {
+                "slot": {
+                    "type": "integer"
+                }
+            }
+        },
         "TriggerRFIDModeResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -178,6 +295,9 @@
         },
         "ValidatePinRequest": {
             "type": "object",
+            "required": [
+                "pin"
+            ],
             "properties": {
                 "pin": {
                     "type": "string"
@@ -186,9 +306,31 @@
         },
         "ValidatePinResponse": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "domains.Log": {
+            "type": "object",
+            "required": [
+                "device_name",
+                "id",
+                "status"
+            ],
+            "properties": {
+                "device_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "boolean"
                 }
             }
         }
